objects/User.object
<CustomObject>
    <fields>
        <fullName>Auction_Kill_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User will have the ability to kill auctions in the counter sent status. It uses a flow and and hits the auction kill endpoint on the Auction Record.</description>
        <inlineHelpText>If checked, the User will have the ability to kill auctions in the counter sent status. It uses a flow and and hits the auction kill endpoint on the Auction Record.</inlineHelpText>
        <label>Auction Kill Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendly_Link__c</fullName>
        <description>Used for BDR&apos;s</description>
        <label>Calendly Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Can_Unwind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if a user can directly unwind</description>
        <label>Can Unwind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseSafe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafe_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Sf_User_Id__c</fullName>
        <label>Changed By Sf User Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Username__c</fullName>
        <label>Changed By Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CR_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current CR Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deactivated_Date__c</fullName>
        <description>Set by workflow &amp; field update when the user record is set active = false</description>
        <inlineHelpText>Date use was deactivated in Salesforce</inlineHelpText>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Maker_Filter_Save__c</fullName>
        <description>Saves the filters into a field from the deal maker page, so when the user refreshes the page or goes back to it later the same filters are saved. This field updates when the user makes a filter change on the page.</description>
        <label>Deal Maker Filter Save</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Priorities__c</fullName>
        <description>Used to store preferences for the Work Order Queue LWC. Represents the user’s selected Priorities &apos;,&apos; comma-separated.</description>
        <label>Default Priorities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Revolving__c</fullName>
        <description>Work order queue default settigns for users</description>
        <label>Default Revolving</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                    <default>true</default>
                    <label>Exclude</label>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Service_Territories__c</fullName>
        <description>Used to store preferences for the Work Order Queue LWC. Represents the user’s selected service territories (Record IDs), comma-separated.</description>
        <label>Default Service Territories</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Status_Values__c</fullName>
        <description>Used to store preferences for the Work Order Queue LWC. Represents the user’s selected status values, comma-separated.</description>
        <label>Default Status Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Work_Types__c</fullName>
        <description>Used to store preferences for the Work Order Queue LWC. Represents the user’s selected work types (Record IDs), comma-separated.</description>
        <label>Default Work Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docebo_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this user should be synced to Docebo LMS</description>
        <inlineHelpText>Indicates if this user should be synced to Docebo LMS</inlineHelpText>
        <label>Docebo User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Allow_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether user have permission to pull decision records from BIQ</description>
        <inlineHelpText>Determine whether user have permission to pull decision records from BIQ</inlineHelpText>
        <label>Allow Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Beta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL Beta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Operations_Rep__c</fullName>
        <label>Field Operations Rep</label>
        <relationshipName>ops_rep</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>Concatenates first and last name on the User record level, allows for referencing in other formula fields and avoiding having to go multiple layers twice to get the full name of a user exposed on related records.</description>
        <formula>FirstName + &quot; &quot; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hover_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Hover Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>acv_prod id found on the users table used to identify internal users</description>
        <externalId>true</externalId>
        <inlineHelpText>This corresponds to the User&apos;s ACV Tools ID</inlineHelpText>
        <label>ACV User Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inside_Territory_Manager__c</fullName>
        <description>Inside Sales or Territory Manager</description>
        <label>Inside/Territory Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_for_Reporting__c</fullName>
        <formula>Manager.FirstName + &quot; &quot; + Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager for Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Leader__c</fullName>
        <label>Sales Leader</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AllowMapsExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Maps Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maps Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLatitude__c</fullName>
        <label>Maps Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultLongitude__c</fullName>
        <label>Maps Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DefaultType__c</fullName>
        <label>DefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DefaultZoomLevel__c</fullName>
        <label>Maps Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__DeviceId__c</fullName>
        <formula>&quot;MALiveAvail-&quot; + LEFT($Organization.Id, 15) + &quot;-&quot; + LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__DeviceVendor__c</fullName>
        <formula>&quot;MapAnything&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EditMapsOrgWideQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Maps Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FinishedAdvRouteSetup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished Maps Advanced Route Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapsSetting__c</fullName>
        <label>Map Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MaxExportSize__c</fullName>
        <label>Maps Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySize__c</fullName>
        <label>Maps Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TPApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Territory Planning Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TestUserLookup__c</fullName>
        <description>For blueline bug.</description>
        <label>TestUserLookup</label>
        <relationshipName>TestChildLookup</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>maps__Version__c</fullName>
        <label>Maps Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>API_Only_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>API Only User</value>
        </filters>
        <label>API Only users</label>
    </listViews>
    <listViews>
        <fullName>ActiveAdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Admin Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_Users_with_True360_Emails</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>360</value>
        </filters>
        <label>Active Users with True360 Emails</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Users_for_Docebo</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Docebo_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Docebo Users</label>
    </listViews>
    <listViews>
        <fullName>Capital_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Capital</value>
        </filters>
        <label>Capital Users</label>
    </listViews>
    <listViews>
        <fullName>FSL_Inspector_Dispatch_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>inspector-dispatch@acvauctions.com</value>
        </filters>
        <label>FSL - Inspector Dispatch User</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Integration_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Integration</value>
        </filters>
        <label>Integration Users</label>
    </listViews>
    <listViews>
        <fullName>Non_ACV_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>notContain</operation>
            <value>acvauctions.com</value>
        </filters>
        <label>Non-ACV Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Admin_Profile_Assignment_Validation</fullName>
        <active>true</active>
        <description>This validation rule prevents users from granting other users the System Administrator profile without having the Admin Profile Assignment permission.</description>
        <errorConditionFormula>AND(OR(ISCHANGED(ProfileId), ISNEW()), Profile.Name == &quot;System Administrator&quot;, !$Permission.Admin_Profile_Assignment,  !$Setup.Validation_Bypass__c.System_Admin_Assignment__c)</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>You cannot grant a user the System Administrator profile without permission.</errorMessage>
    </validationRules>
</CustomObject>